# tts-through-mic

./: .gitignore  README.md  enter.sh  flake.nix  pyproject.toml  requirements.txt  script.sh  setup.sh  shell.nix
src/: main.py
