[tool.poetry]
name = "tts through mic"
version = "0.0.1"
description = ""
authors = []
packages = [
  {include = "./src"},
]

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "*"
gTTS = "*"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pylint = "^3.0.0"


[tool.poetry.scripts]
start = "bot:run"